2008-10-16  Jb Evain  <jbevain@novell.com>

	* masterinfos/silverlight/*.info: update to SL2.

2008-09-23  Jb Evain  <jbevain@novell.com>

	* masterinfos/silverlight/Mono.CompilerServices.SymbolWriter.info
	* Makefile:
		tune the SymbolWriter as well.

2008-09-23  Jb Evain  <jbevain@novell.com>

	* Makefile: only execute the check visibility step if
	CHECK_VISIBILITY is defined.

2008-09-18  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/AdjustVisibility.cs: correctly process public nested types.

2008-09-12  Jb Evain  <jbevain@novell.com>

	* Makefile: tune System.ServiceModel.Web.

2008-09-12  Jb Evain  <jbevain@novell.com>

	* Makefile: tune System.ServiceModel.dll

2008-09-12  Jb Evain  <jbevain@novell.com>

	* Makefile: make the linker generate new guids for the tuned
	assemblies.

2008-09-09  Jb Evain  <jbevain@novell.com>

	* Makefile: tune System.Runtime.Serialization as well.

2008-08-05  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/CheckVisibility.cs: properly verify famorassem.

2008-06-10  Jb Evain  <jbevain@novell.com>

	* masterinfos/silverlight/System.Net.info
	* masterinfos/silverlight/mscorlib.info
	* masterinfos/silverlight/System.Xml.info
	* masterinfos/silverlight/System.info:
		Update to SL2B2 API.

2008-04-13  Jb Evain  <jbevain@novell.com>

	* masterinfos/silverlight/*.info: 2.0 api.
	* Makefile: update.
	Merged from the Moonlight 2 branch.

Thu Mar 13 22:32:24 CET 2008 Paolo Molaro <lupus@ximian.com>

	* Makefile: strong name the tuned assemblies.

2008-03-13  Jb Evain  <jbevain@novell.com>

	* Mono.Tuner/AdjustVisibility.cs: don't adjust enums.

2008-02-18  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile (inst-%, gac-%): Fix dependencies.

2008-02-17  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile: Improve.  Update to new net_2_1 profiles.  Specify
	more dependencies.  Do work only when necessary.
	* Descriptors/smcs.xml: Add CompilerCallableEntryPoint.

2008-02-01  Jb Evain  <jbevain@novell.com>
